--- a/front-office/src/locales/fr/translation.json
+++ b/front-office/src/locales/fr/translation.json
@@ -46,5 +46,13 @@
       "supportCohesion": "Soutiens vivre ensemble",
       "joinUs": "Rejoingez-nous",
       "headOffice": "Siège social : Hamdallaye ACI Immeuble Alfarouk non loin de CANAL+",
-      "footerCopyright": "FMED Mali. Tous droits réservés — Site développé par MAG SERVICES MALI"
+      "footerCopyright": "FMED Mali. Tous droits réservés — Site développé par MAG SERVICES MALI",
+      "humanitarianTitle": "HUMANITAIRES",
+      "humanitarianDesc": "Le Mali est classé parmi les vingt pays les plus pauvres de la planète.",
+      "socioTitle": "SOCIO-PROFESSIONAL",
+      "socioDesc": "AIDE A L’INSERTION SOCIO PROFESSIONNELLE",
+      "populationTitle": "POPULATIONS",
+      "populationDesc": "SOUTIEN AUX SERVICES DE LA POPULATIONS",
+      "cohesionTitle": "VIVRE ENSEMBLE",
+      "cohesionDesc": "ACTIVITES CULTURELLES ET DE SOUTIEN AU VIVRE ENSEMBLE"
 }
