--- a/front-office/src/locales/en/translation.json
+++ b/front-office/src/locales/en/translation.json
@@ -54,5 +54,7 @@
       "populationTitle": "POPULATIONS",
       "populationDesc": "SUPPORT TO POPULATION SERVICES",
       "cohesionTitle": "LIVING TOGETHER",
-      "cohesionDesc": "CULTURAL AND SUPPORT ACTIVITIES FOR LIVING TOGETHER"
+      "cohesionDesc": "CULTURAL AND SUPPORT ACTIVITIES FOR LIVING TOGETHER",
+      "learnMore": "Learn more",
+      "contact": "Contact Us"
 }
