--- a/front-office/src/locales/fr/translation.json
+++ b/front-office/src/locales/fr/translation.json
@@ -54,5 +54,7 @@
       "populationTitle": "POPULATIONS",
       "populationDesc": "SOUTIEN AUX SERVICES DE LA POPULATIONS",
       "cohesionTitle": "VIVRE ENSEMBLE",
-      "cohesionDesc": "ACTIVITES CULTURELLES ET DE SOUTIEN AU VIVRE ENSEMBLE"
+      "cohesionDesc": "ACTIVITES CULTURELLES ET DE SOUTIEN AU VIVRE ENSEMBLE",
+      "learnMore": " En savoir plus",
+      "contact": "Contactez-Nous"
 }
