etape 3 presque termine à 96%

--- a/front-office/src/locales/en/translation.json
+++ b/front-office/src/locales/en/translation.json
@@ -56,5 +56,11 @@
       "cohesionTitle": "LIVING TOGETHER",
       "cohesionDesc": "CULTURAL AND SUPPORT ACTIVITIES FOR LIVING TOGETHER",
       "learnMore": "Learn more",
-      "contact": "Contact Us"
+      "contact": "Contact Us",
+      "fonsejB": "Fonsej articles",
+      "fonsejT": "Follow all the FONSEJ news here.",
+      "fonsejH": "Stay informed about the latest FONSEJ initiatives, projects, and announcements through our regularly updated news.",
+      "eventTitle": "Our events",
+      "eventLabel": "Discover our events",
+      "eventDesc": "Relive our highlights and stay informed about upcoming events that are shaping the future with FMED MALI."
 }
