--- a/front-office/src/locales/fr/translation.json
+++ b/front-office/src/locales/fr/translation.json
@@ -56,5 +56,11 @@
       "cohesionTitle": "VIVRE ENSEMBLE",
       "cohesionDesc": "ACTIVITES CULTURELLES ET DE SOUTIEN AU VIVRE ENSEMBLE",
       "learnMore": " En savoir plus",
-      "contact": "Contactez-Nous"
+      "contact": "Contactez-Nous",
+      "fonsejB": "Les articles Fonsej",
+      "fonsejT": "Suivez ici toutes les actualités du FONSEJ.",
+      "fonsejH": "Tenez-vous informé des dernières initiatives, projets et annonces du FONSEJ à travers nos actualités régulièrement mises à jour.",
+      "eventTitle": "Nos événements",
+      "eventLabel": "Découvrez nos événements",
+      "eventDesc": "Revivez nos moments marquants et restez informé des événements à venir qui façonnent l’avenir avec FMED MALI."
 }
